# boxel

./: Cargo.toml  README.md
mesh/: obamium.mtl
src/: engine.rs  main.rs  primitives.rs  test.rs
src/config/: mod.rs
src/engine/: block.rs  chunk.rs  crosshair.rs  generator.rs  march.rs  mod.rs  types.rs  world.rs
src/shaders/: crosshair_vertex.glsl  fragment.glsl  ray_vertex.glsl  vertex.glsl
src/support/: camera.rs  mod.rs
